# TimeLoop-Terminal

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONCURRENT_ACCESS_FIX.md  Cargo.toml  README.md  SECURITY.md  check_layout  check_write.rs  core  demo_file_watching.md  plain_backup.json  test_file_watching.txt
.Jules/: palette.md
.github/: copilot-instructions.md
.github/workflows/: actions-test.yml  ci.yml  codeql.yml  release.yml  rust-clippy.yml
.jules/: bolt.md
docs/: Final_Implementation_Summary.md  GPU_Implementation.md  GPU_Implementation_Summary.md  GPU_Rendering.md  Implementation_Status.md  ROADMAP.md  Storage_Improvements_Summary.md
examples/: gpu_text_demo.rs  simple_gpu_demo.rs  simple_storage_demo.rs  storage_bench.rs  storage_improvements_demo.rs
src/: ai.rs  branch.rs  error.rs  events.rs  file_watcher.rs  gpu_renderer.rs  gpu_terminal.rs  gui.rs  lib.rs  main.rs  replay.rs  session.rs  storage.rs  terminal.rs
src/shaders/: text.wgsl
