[package]
name = "timeloop-terminal"
version = "0.2.0"
edition = "2021"
authors = ["TimeLoop Terminal Team"]
description = "A CLI that lets you rewind, replay, and branch your coding sessions"
license = "MIT"

[dependencies]
# Terminal and TUI
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.24"

# Event handling and async
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# In-memory storage (no database needed!)
uuid = { version = "1.0", features = ["v4", "serde"] }

# File system watching
notify = "6.0"

# Command parsing and execution
clap = { version = "4.0", features = ["derive"] }
shellwords = "1.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Global singletons and synchronization
once_cell = "1.19"

# Optional: For future AI features
reqwest = { version = "0.11", features = ["json"], optional = true }

# GUI using eframe/egui (optional)
eframe = { version = "0.24", optional = true }

rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[features]
default = []
ai = ["dep:reqwest"]
gui = ["dep:eframe"]
all = ["dep:reqwest", "dep:eframe"]
